# tpns

./: CMakeLists.txt  README.md  csv.hpp  lab1.ipynb  lab2.ipynb  lab3.ipynb  lab4.ipynb  laptops_in.csv  layer.hpp  main.cpp  main_laptops.cpp  main_mashrooms.cpp  mashrooms_in.csv  perceptron.cpp  perceptron.hpp  roc.ipynb
src/: avarage_pooling_layer.hpp  convolution_layer.hpp  csv.hpp  dense_layer.hpp  flatten_layer.hpp  gru_layer.hpp  layer.hpp  layer_interface.hpp  lstm_layer.hpp  main_lab4.cpp  main_laptops.cpp  main_mashrooms.cpp  main_rnn.cpp  max_pooling_layer.hpp  model.cpp  model.hpp  padding_layer.hpp  perceptron.cpp  perceptron.hpp  rnn_layer.hpp  test.cpp
